--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -1,7 +1,7 @@
 [TextView]
 indent=30
 tabs=None
-font=PT Mono Regular 11
+font=Ubuntu Mono 13
 justify=
 linespacing=3
 bullet_icon_size=GTK_ICON_SIZE_MENU
@@ -21,11 +21,11 @@ foreground=grey
 
 [Tag code]
 foreground=#6f3112
-font=Ubuntu Mono 13
+font=Source Code Pro Regular 12
 
 [Tag pre]
 foreground=#6f3112
-font=Ubuntu Mono 13
+font=Source Code Pro Regular 12
 wrap-mode=GTK_WRAP_NONE
 indent=0
 
