--- a/.tmux.conf
+++ b/.tmux.conf
@@ -95,10 +95,8 @@ set -g pane-active-border-style bg=colour236,fg=colour251
 # The statusbar {
 
 set -g status-position bottom
-set -g status-bg colour234
-set -g status-fg colour137
+set -g status-style dim,bg=colour234,fg=colour137
 
-set -g status-style dim
 set -g status-left '#[fg=magenta]#[bg=black] « #S » #[bg=cyan]#[fg=colour8]'
 set -g status-right '#[fg=colour233,bg=colour241] %a, %b %d, %Y #[fg=colour233,bg=colour245] %H:%M:%S '
 set -g status-right-length 50
