update zim style font

--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -21,11 +21,11 @@ foreground=grey
 
 [Tag code]
 foreground=#6f3112
-font=Source Code Pro Regular 12
+font=Source Code Variable Regular 12
 
 [Tag pre]
 foreground=#6f3112
-font=Source Code Pro Regular 12
+font=Source Code Variable Regular 12
 wrap-mode=GTK_WRAP_NONE
 indent=0
 
