zim style confs

--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -20,14 +20,16 @@ strikethrough=True
 foreground=grey
 
 [Tag code]
-foreground=#6f3112
+foreground=#555555
 font=Source Code Variable Regular 12
 
 [Tag pre]
-foreground=#6f3112
+foreground=#444444
+# background=#eeeeee
 font=Source Code Variable Regular 12
 wrap-mode=GTK_WRAP_NONE
 indent=0
+
 
 [Tag link]
 foreground=#0077bb
