zim pre tag color

--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -24,7 +24,7 @@ foreground=#555555
 font=Source Code Variable Regular 12
 
 [Tag pre]
-foreground=#444444
+foreground=#6b426b
 # background=#eeeeee
 font=Source Code Variable Regular 12
 wrap-mode=GTK_WRAP_NONE
