--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -20,7 +20,7 @@ strikethrough=True
 foreground=grey
 
 [Tag code]
-foreground=#555555
+foreground=#6b426b
 font=Source Code Variable Regular 12
 
 [Tag pre]
