--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,129 +1,18 @@
-# My tmux config (look at the end of the file for links).
+#
+# Entry point for my Tmux config.
+#
 
-# Remap prefix from C-b to C-a.
-unbind C-b
-set-option -g prefix C-a
-bind-key C-a send-prefix
-
-set -g mode-keys vi
-set -g base-index 1
-
-# bind-key -T y copy-pipe "xsel -i -p -b"
-bind-key -T copy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
-bind-key p run-shell "xsel -o | tmux load-buffer - ; tmux paste-buffer"
-
-bind-key h select-pane -L
-bind-key j select-pane -D
-bind-key k select-pane -U
-bind-key l select-pane -R
-
-bind-key L last-window
-
-set -g default-terminal "rxvt-unicode-256color"
-# set -g default-terminal "screen-256color"
-
-set -g history-limit 20000
-set -g mouse on
-set-option -g allow-rename off
-set-option -g automatic-rename off
-#set -sg escape-time 0.2
-
-# bind a reload key
-bind-key R source-file ~/.tmux.conf \; display-message "  ~/.tmux.conf reloaded..".
-bind-key G new-window -n 'ghci λ' \; send-keys ghci C-m
-bind-key I new-window -n 'irb' \; send-keys irb C-m
-bind-key N new-window -n 'nodejs' \; send-keys 'node -i' C-m
-bind-key S new-window -n 'sass'
-bind-key E new-window -n 'emacs'
-bind-key V new-window -n 'vim'
-
-#########################################################################
-# panes
-set -g pane-border-style fg=black
-set -g pane-active-border-style fg=brightred
-
-## Status bar design
-# status line
-if-shell "[[ $(tmux -V | cut -d ' ' -f 2) < 2.2 ]]" \
-    'set -g status-utf8 on'
-
-# screen-256color is necessary to get some keys working properly.
-#https://wiki.archlinux.org/index.php/Home_and_End_keys_not_working
-set -g default-terminal screen-256color
-
-set -g status-justify left
-set -g status-bg default
-set -g status-fg colour12
-set -g status-interval 1
-
-# messaging
-set -g message-style fg=black,bg=yellow
-set -g message-command-style fg=blue,bg=yellow
-
-#window mode
-setw -g mode-style bg=colour6,fg=colour0
-
-# window status
-setw -g window-status-format " #F#I:#W#F "
-setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
-setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
-setw -g window-status-current-style bg=colour0,fg=colour11,dim
-setw -g window-status-style bg=green,fg=black,reverse
-
-# Info on left (I don't have a session display for now)
-set -g status-left ''
-
-# loud or quiet?
-set-option -g visual-activity off
-set-option -g visual-bell off
-set-option -g visual-silence off
-set-window-option -g monitor-activity off
-set-option -g bell-action none
-
-# The modes {
-setw -g clock-mode-colour colour135
-setw -g mode-style bg=colour238,fg=colour196,bold
-
-# }
-# The panes {
-
-set -g pane-border-style bg=colour235,fg=colour238
-set -g pane-active-border-style bg=colour236,fg=colour251
-
-# }
-# The statusbar {
-
-set -g status-position bottom
-set -g status-style dim,bg=colour234,fg=colour137
-
-set -g status-left '#[fg=magenta]#[bg=black] « #S » #[bg=cyan]#[fg=colour8]'
-set -g status-right '#[fg=colour233,bg=colour241] %a, %b %d, %Y #[fg=colour233,bg=colour245] %H:%M:%S '
-set -g status-right-length 50
-set -g status-left-length 25
-
-setw -g window-status-current-style bg=colour238,fg=colour81,bold
-setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
-
-setw -g window-status-style bg=colour235,fg=colour138,none
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style bg=colour1,fg=colour255,bold
-
-# }
-# The messages {
-
-set -g message-style bg=colour166,fg=colour232,bold
-
-# }
-
+source-file ~/Projects/dotfiles/tmux/shared-config.conf
+source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf
 
 
 ##################################################################################
-# Some resources used to get to this conf file. ##################################
+# References:
 #
 # - man tmux
 # - https://wiki.archlinux.org/index.php/tmux
 # - https://github.com/ThomasAdam/tmux/blob/master/FAQ
 # - https://www.reddit.com/r/unixporn/comments/3cn5gi/tmux_is_my_wm_on_os_x/
 # - http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+# - https://github.com/tmux/tmux/issues/1689 (with an answer from me)
+#
