Add tmux-resurrect plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,8 +2,13 @@
 # Entry point for my Tmux config.
 #
 
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
 source-file ~/Projects/dotfiles/tmux/shared-config.conf
 source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf
+
+run -b '~/.tmux/plugins/tpm/tpm'
 
 
 ##################################################################################
