Improve tmux colors and shared config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,18 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 source-file ~/Projects/dotfiles/tmux/shared-config.conf
-source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf
+
+#
+# Allows tmux to be started either in dark or light mode. Example:
+#
+#   $ TMUX_THEME=light tmux new-session -s dotfiles -c ~/Projects/dotfiles
+#
+#   $ TMUX_THEME=dark tmux new-session -s playground
+#
+if-shell '[ "$TMUX_THEME" = dark ]' \
+    'source-file ~/Projects/dotfiles/tmux/themes/tmux-dark.conf' \
+    'source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf'
+
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
