--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -17,8 +17,10 @@ bind-key l select-pane -R
 
 bind-key L last-window
 
-set -g default-terminal "rxvt-unicode-256color"
-# set -g default-terminal "screen-256color"
+#
+# https://github.com/tmux/tmux/wiki/FAQ
+#
+set -g default-terminal screen-256color
 
 set -g history-limit 20000
 set -g mouse on
