--- a/tmux/themes/tmux-dark.conf
+++ b/tmux/themes/tmux-dark.conf
@@ -11,10 +11,6 @@ set -g pane-active-border-style fg=brightred
 if-shell "[[ $(tmux -V | cut -d ' ' -f 2) < 2.2 ]]" \
     'set -g status-utf8 on'
 
-# screen-256color is necessary to get some keys working properly.
-#https://wiki.archlinux.org/index.php/Home_and_End_keys_not_working
-set -g default-terminal screen-256color
-
 set -g status-justify left
 set -g status-bg default
 set -g status-fg colour12
@@ -24,13 +20,13 @@ set -g status-interval 1
 set -g message-style fg=black,bg=yellow
 set -g message-command-style fg=blue,bg=yellow
 
-#window mode
+# window mode
 setw -g mode-style bg=colour6,fg=colour0
 
 # window status
 setw -g window-status-format " #F#I:#W#F "
 setw -g window-status-current-format " #F#I:#W#F "
-setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-format "#[fg=magenta]#[bg=colour1] #I #[bg=cyan]#[fg=colour8] #W "
 setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
 setw -g window-status-current-style bg=colour0,fg=colour11,dim
 setw -g window-status-style bg=green,fg=black,reverse
@@ -61,7 +57,7 @@ set -g pane-active-border-style bg=colour236,fg=colour251
 set -g status-position bottom
 set -g status-style dim,bg=colour234,fg=colour137
 
-set -g status-left '#[fg=magenta]#[bg=black] « #S » #[bg=cyan]#[fg=colour8]'
+set -g status-left '#[fg=colour226]#[bg=colour235] « #S » #[bg=cyan]#[fg=colour8]'
 set -g status-right '#[fg=colour233,bg=colour241] %a, %b %d, %Y #[fg=colour233,bg=colour245] %H:%M:%S '
 set -g status-right-length 50
 set -g status-left-length 25
