Rename theme env var for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,11 +10,11 @@ source-file ~/Projects/dotfiles/tmux/shared-config.conf
 #
 # Allows tmux to be started either in dark or light mode. Example:
 #
-#   $ TMUX_THEME=light tmux new-session -s dotfiles -c ~/Projects/dotfiles
+#   $ THEME=light tmux new-session -s dotfiles -c ~/Projects/dotfiles
 #
-#   $ TMUX_THEME=dark tmux new-session -s playground
+#   $ THEME=dark tmux new-session -s playground
 #
-if-shell '[ "$TMUX_THEME" = dark ]' \
+if-shell '[ "$THEME" = dark ]' \
     'source-file ~/Projects/dotfiles/tmux/themes/tmux-dark.conf' \
     'source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf'
 
