Rename TERM env for tmux

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -20,7 +20,7 @@ bind-key L last-window
 #
 # https://github.com/tmux/tmux/wiki/FAQ
 #
-set -g default-terminal screen-256color
+set -g default-terminal tmux-256color
 
 set -g history-limit 20000
 set -g mouse on
