--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -1,28 +1,289 @@
 [global_config]
+  geometry_hinting = True
   title_transmit_bg_color = "#ce5c00"
+  title_inactive_fg_color = "#d3d7cf"
+  title_inactive_bg_color = "#c17d11"
 [keybindings]
   switch_to_tab_1 = <Alt>1
   switch_to_tab_2 = <Alt>2
   switch_to_tab_3 = <Alt>3
   switch_to_tab_4 = <Alt>4
   switch_to_tab_5 = <Alt>5
+  edit_tab_title = <Primary><Alt>s
 [profiles]
   [[default]]
     allow_bold = False
-    background_color = "#fdf6e3"
+    audible_bell = True
+    icon_bell = False
+    background_color = "#300a24"
     cursor_blink = False
     cursor_color = "#aaaaaa"
-    font = Source Code Variable 12
-    foreground_color = "#657b83"
+    font = ProFontWindows Nerd Font 15
+    foreground_color = "#ffffff"
+    scrollback_lines = 19624
     palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     use_system_font = False
+    use_theme_colors = True
 [layouts]
   [[default]]
     [[[window0]]]
       type = Window
       parent = ""
-      size = 1280, 768
     [[[child1]]]
       type = Terminal
       parent = window0
+  [[HackerRankJavaScript]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = HackerRank JavaScript
+      last_active_term = 2de4bfcf-9d72-4b6c-a91b-8b7b843e2a13
+      last_active_window = True
+    [[[child1]]]
+      type = HPaned
+      parent = child0
+      order = 0
+      position = 960
+      ratio = 0.5013054830287206
+    [[[terminal2]]]
+      type = Terminal
+      parent = child1
+      order = 0
+      profile = default
+      title = shell1
+      uuid = 261ed95c-29ea-4144-9acc-8b6eb08c2aa1
+      directory = /home/fernando/Projects/proghowto/codewars/javascript
+    [[[child3]]]
+      type = VPaned
+      parent = child1
+      order = 1
+      position = 509
+      ratio = 0.5
+    [[[terminal4]]]
+      type = Terminal
+      parent = child3
+      order = 0
+      profile = default
+      title = shell 2
+      uuid = 26bcb7a3-675a-4f55-8a04-e9d61bb9359c
+      directory = /home/fernando/Projects/proghowto/codewars/javascript
+    [[[terminal5]]]
+      type = Terminal
+      parent = child3
+      order = 1
+      profile = default
+      title = node -i
+      uuid = 2de4bfcf-9d72-4b6c-a91b-8b7b843e2a13
+      command = ""
+      directory = /home/fernando/Projects/proghowto/codewars/javascript
+  [[MemoApp]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = MemoApp DEV
+      last_active_window = True
+    [[[child1]]]
+      type = Notebook
+      parent = child0
+      order = 0
+      labels = Shell, Shells
+      last_active_term = 2953ef35-8411-48a0-8003-f6fda001e010, c6a4f5c3-c0cc-4ef5-908f-937992b545b5
+      active_page = 1
+    [[[terminal2]]]
+      type = Terminal
+      parent = child1
+      order = 0
+      profile = default
+      title = main
+      uuid = 2953ef35-8411-48a0-8003-f6fda001e010
+      directory = /home/fernando/Projects/MemoApp/memoapp
+    [[[child3]]]
+      type = HPaned
+      parent = child1
+      order = 1
+      position = 957
+      ratio = 0.5002613695765813
+    [[[terminal4]]]
+      type = Terminal
+      parent = child3
+      order = 0
+      profile = default
+      title = bash
+      uuid = c6a4f5c3-c0cc-4ef5-908f-937992b545b5
+      directory = /home/fernando/Projects/MemoApp/memoapp
+    [[[terminal5]]]
+      type = Terminal
+      parent = child3
+      order = 1
+      profile = default
+      title = bash
+      uuid = e3c3a200-3e39-498f-a39a-c9daf40e9166
+      directory = /home/fernando/Projects/MemoApp/memoapp
+  [[natura-fe]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = HackerRank JavaScript
+      last_active_term = 26bcb7a3-675a-4f55-8a04-e9d61bb9359c
+      last_active_window = False
+    [[[child1]]]
+      type = HPaned
+      parent = child0
+      order = 0
+      position = 956
+      ratio = 0.49921671018276764
+    [[[terminal2]]]
+      type = Terminal
+      parent = child1
+      order = 0
+      profile = default
+      title = shell1
+      uuid = 261ed95c-29ea-4144-9acc-8b6eb08c2aa1
+      directory = /home/fernando/Projects/Natura/naturacf-fe
+    [[[terminal3]]]
+      type = Terminal
+      parent = child1
+      order = 1
+      profile = default
+      title = shell 2
+      uuid = 26bcb7a3-675a-4f55-8a04-e9d61bb9359c
+      directory = /home/fernando/Projects/Natura/naturacf-fe
+    [[[child4]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = NATURA-FE
+      last_active_window = True
+    [[[child5]]]
+      type = Notebook
+      parent = child4
+      order = 0
+      labels = main, shells
+      last_active_term = 6a454cbb-62ef-41c9-9328-6e5e90da7f15, ed750cb1-1d40-4139-aa0e-66af62a8099a
+      active_page = 1
+    [[[child6]]]
+      type = HPaned
+      parent = child5
+      order = 0
+      position = 957
+      ratio = 0.5002613695765813
+    [[[terminal7]]]
+      type = Terminal
+      parent = child6
+      order = 0
+      profile = default
+      title = serv
+      uuid = 146185d0-12ab-4306-a915-8e8de1d273eb
+      directory = /home/fernando/Projects/Natura/naturacf-fe
+    [[[terminal8]]]
+      type = Terminal
+      parent = child6
+      order = 1
+      profile = default
+      title = shell
+      uuid = 6a454cbb-62ef-41c9-9328-6e5e90da7f15
+      directory = /home/fernando/Projects/Natura/naturacf-fe
+    [[[child9]]]
+      type = HPaned
+      parent = child5
+      order = 1
+      position = 1236
+      ratio = 0.6461055933089388
+    [[[terminal10]]]
+      type = Terminal
+      parent = child9
+      order = 0
+      profile = default
+      title = jest
+      uuid = ed750cb1-1d40-4139-aa0e-66af62a8099a
+      directory = /home/fernando/Projects/Natura/naturacf-fe
+    [[[terminal11]]]
+      type = Terminal
+      parent = child9
+      order = 1
+      profile = default
+      title = bash
+      uuid = bf2919ec-f3a3-4e39-8e9e-944cc14ed179
+      directory = /home/fernando/Projects/Natura/naturacf-fe
+  [[Terminator]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = Terminator DEV
+      last_active_window = True
+    [[[child1]]]
+      type = Notebook
+      parent = child0
+      order = 0
+      labels = Main, Shells
+      last_active_term = 356287d1-200e-41b3-8a13-6999dfb0e4f8, e2a3e548-3c01-4595-8320-c238a4647def
+      active_page = 1
+    [[[child2]]]
+      type = HPaned
+      parent = child1
+      order = 0
+      position = 1268
+      ratio = 0.6628332462101412
+    [[[terminal3]]]
+      type = Terminal
+      parent = child2
+      order = 0
+      profile = default
+      title = main
+      uuid = 09757a5a-0a70-4254-8f1f-24bee2252628
+      directory = /home/fernando/Projects/terminator
+    [[[terminal4]]]
+      type = Terminal
+      parent = child2
+      order = 1
+      profile = default
+      title = shell
+      uuid = 356287d1-200e-41b3-8a13-6999dfb0e4f8
+      directory = /home/fernando/Projects/terminator
+    [[[child5]]]
+      type = HPaned
+      parent = child1
+      order = 1
+      position = 956
+      ratio = 0.4997386304234187
+    [[[terminal6]]]
+      type = Terminal
+      parent = child5
+      order = 0
+      profile = default
+      title = bash
+      uuid = 1cc53140-4e8f-4af7-af43-251b1e39f77a
+      directory = /home/fernando/Projects/terminator
+    [[[terminal7]]]
+      type = Terminal
+      parent = child5
+      order = 1
+      profile = default
+      title = bash
+      uuid = e2a3e548-3c01-4595-8320-c238a4647def
+      directory = /home/fernando/Projects/terminator
 [plugins]
