--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -21,7 +21,7 @@
     font = ProFontWindows Nerd Font 15
     foreground_color = "#ffffff"
     scrollback_lines = 19624
-    palette = "#000000:#cc0000:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
+    palette = "#000000:#ef2929:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     use_system_font = False
     use_theme_colors = True
 [layouts]
@@ -229,41 +229,41 @@
       type = Window
       parent = ""
       order = 0
-      position = 0:0
+      position = 0:24
       maximised = True
       fullscreen = False
       size = 1920, 1023
-      title = Terminator DEV
+      title = λ DOTFILES λ
       last_active_window = True
     [[[child1]]]
       type = Notebook
       parent = child0
       order = 0
       labels = Main, Shells
-      last_active_term = 356287d1-200e-41b3-8a13-6999dfb0e4f8, e2a3e548-3c01-4595-8320-c238a4647def
+      last_active_term = 5a9dcd65-7555-48b4-9de9-cdfac593aa79, cf5c0aa0-aac9-46f6-b592-edb27259a5ab
       active_page = 1
     [[[child2]]]
       type = HPaned
       parent = child1
       order = 0
-      position = 1268
-      ratio = 0.6628332462101412
+      position = 1143
+      ratio = 0.5974908520648197
     [[[terminal3]]]
       type = Terminal
       parent = child2
       order = 0
       profile = default
-      title = main
-      uuid = 09757a5a-0a70-4254-8f1f-24bee2252628
-      directory = /home/fernando/Projects/terminator
+      title = vim
+      uuid = 64a74e54-90b2-431a-bea5-cf14d4efaeec
+      directory = /home/fernando/Projects/dotfiles
     [[[terminal4]]]
       type = Terminal
       parent = child2
       order = 1
       profile = default
       title = shell
-      uuid = 356287d1-200e-41b3-8a13-6999dfb0e4f8
-      directory = /home/fernando/Projects/terminator
+      uuid = 5a9dcd65-7555-48b4-9de9-cdfac593aa79
+      directory = /home/fernando/Projects/dotfiles
     [[[child5]]]
       type = HPaned
       parent = child1
@@ -275,15 +275,15 @@
       parent = child5
       order = 0
       profile = default
-      title = bash
-      uuid = 1cc53140-4e8f-4af7-af43-251b1e39f77a
-      directory = /home/fernando/Projects/terminator
+      title = Help
+      uuid = dd8f508a-1688-4867-830c-ddd4a7323011
+      directory = /home/fernando/Projects/dotfiles
     [[[terminal7]]]
       type = Terminal
       parent = child5
       order = 1
       profile = default
-      title = bash
-      uuid = e2a3e548-3c01-4595-8320-c238a4647def
-      directory = /home/fernando/Projects/terminator
+      title = Bash
+      uuid = cf5c0aa0-aac9-46f6-b592-edb27259a5ab
+      directory = /home/fernando/Projects/dotfiles
 [plugins]
