--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -9,29 +9,50 @@
   switch_to_tab_3 = <Alt>3
   switch_to_tab_4 = <Alt>4
   switch_to_tab_5 = <Alt>5
+  broadcast_off = <Primary><Shift><Alt>o
+  broadcast_group = <Primary><Shift><Alt>g
+  broadcast_all = <Primary><Shift><Alt>a
   edit_tab_title = <Primary><Alt>s
 [profiles]
   [[default]]
     allow_bold = False
     audible_bell = True
     icon_bell = False
-    background_color = "#300a24"
+    background_color = "#ffffdd"
     cursor_blink = False
     cursor_color = "#aaaaaa"
     font = ProFontWindows Nerd Font 15
-    foreground_color = "#ffffff"
+    foreground_color = "#000000"
     scrollback_lines = 19624
-    palette = "#000000:#ef2929:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     use_system_font = False
-    use_theme_colors = True
+  [[Dark]]
+    background_color = "#282828"
+    cursor_blink = False
+    cursor_color = "#aaaaaa"
+    font = ProFontWindows Nerd Font Mono 15
+    foreground_color = "#ebdbb2"
+    palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
+    use_system_font = False
 [layouts]
   [[default]]
-    [[[window0]]]
+    [[[child0]]]
       type = Window
       parent = ""
-    [[[child1]]]
+      order = 0
+      position = 300:60
+      maximised = False
+      fullscreen = False
+      size = 1320, 960
+      title = λ Always Be Awesome! λ
+      last_active_term = 98940032-e129-4685-8a05-cfa9d4835f89
+      last_active_window = True
+    [[[terminal1]]]
       type = Terminal
-      parent = window0
+      parent = child0
+      order = 0
+      profile = default
+      title = bash
+      uuid = 98940032-e129-4685-8a05-cfa9d4835f89
   [[HackerRankJavaScript]]
     [[[child0]]]
       type = Window
@@ -348,4 +369,220 @@
       title = Bash
       uuid = 54cd244f-b0c5-4144-bd51-67c876f0e690
       directory = /home/fernando/Projects/terminator
+  [[Terminator-Website]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:24
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = λ TERMINATOR WEBSITE λ
+      last_active_window = True
+    [[[child1]]]
+      type = Notebook
+      parent = child0
+      order = 0
+      labels = Main, Shells
+      last_active_term = 98940032-e129-4685-8a05-cfa9d4835f89, b3a7a735-11e4-44dc-8c8b-c70298c34440
+      active_page = 0
+    [[[child2]]]
+      type = HPaned
+      parent = child1
+      order = 0
+      position = 1151
+      ratio = 0.6016727652901203
+    [[[terminal3]]]
+      type = Terminal
+      parent = child2
+      order = 0
+      profile = default
+      title = vim
+      uuid = 98940032-e129-4685-8a05-cfa9d4835f89
+      directory = /home/fernando/Projects/gnome-terminator.github.io
+    [[[terminal4]]]
+      type = Terminal
+      parent = child2
+      order = 1
+      profile = default
+      title = shell
+      uuid = 9ddff28b-8c19-4a99-b6fc-e8b70ab60bca
+      directory = /home/fernando/Projects/gnome-terminator.github.io
+    [[[child5]]]
+      type = HPaned
+      parent = child1
+      order = 1
+      position = 956
+      ratio = 0.4997386304234187
+    [[[terminal6]]]
+      type = Terminal
+      parent = child5
+      order = 0
+      profile = default
+      title = bash
+      uuid = b3a7a735-11e4-44dc-8c8b-c70298c34440
+      directory = /home/fernando/Projects/gnome-terminator.github.io
+    [[[terminal7]]]
+      type = Terminal
+      parent = child5
+      order = 1
+      profile = default
+      title = bash
+      uuid = 14aa665e-0f37-4c92-9913-f6bc36accde0
+      directory = /home/fernando/Projects/gnome-terminator.github.io
+  [[Codewars]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = λ CODEWARS λ
+      last_active_window = True
+    [[[child1]]]
+      type = Notebook
+      parent = child0
+      order = 0
+      labels = Main, Shells
+      last_active_term = 98940032-e129-4685-8a05-cfa9d4835f89, d322b406-de66-4551-8675-ff9dce4c60cd
+      active_page = 1
+    [[[child2]]]
+      type = HPaned
+      parent = child1
+      order = 0
+      position = 1016
+      ratio = 0.531102979613173
+    [[[terminal3]]]
+      type = Terminal
+      parent = child2
+      order = 0
+      profile = default
+      title = vim
+      uuid = 98940032-e129-4685-8a05-cfa9d4835f89
+      directory = /home/fernando/Projects/codewars
+    [[[child4]]]
+      type = VPaned
+      parent = child2
+      order = 1
+      position = 494
+      ratio = 0.5
+    [[[terminal5]]]
+      type = Terminal
+      parent = child4
+      order = 0
+      profile = default
+      title = emacs
+      uuid = ea180571-d2ec-4312-af60-73f96829e65c
+      directory = /home/fernando/Projects/codewars
+    [[[terminal6]]]
+      type = Terminal
+      parent = child4
+      order = 1
+      profile = default
+      title = shell
+      uuid = 9535ae7b-76a4-4e12-8549-da4191cfe6d5
+      directory = /home/fernando/Projects/codewars
+    [[[child7]]]
+      type = HPaned
+      parent = child1
+      order = 1
+      position = 956
+      ratio = 0.4997386304234187
+    [[[terminal8]]]
+      type = Terminal
+      parent = child7
+      order = 0
+      profile = default
+      title = help
+      uuid = cbb8054f-d482-41d3-81f2-359e096078c7
+      directory = /home/fernando/Projects/codewars
+    [[[terminal9]]]
+      type = Terminal
+      parent = child7
+      order = 1
+      profile = default
+      title = shell
+      uuid = d322b406-de66-4551-8675-ff9dce4c60cd
+      directory = /home/fernando/Projects/codewars
+  [[Classic]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = λ Always Be Awesome! λ
+      last_active_window = True
+    [[[child1]]]
+      type = Notebook
+      parent = child0
+      order = 0
+      labels = Main, Shells and Help, FullWin CmdLine
+      last_active_term = 98940032-e129-4685-8a05-cfa9d4835f89, f20ee607-4267-4c7d-9c9b-85f2ea451c51, 22e2f0c3-ba25-4f0d-983a-6df49240a575
+      active_page = 2
+    [[[child2]]]
+      type = HPaned
+      parent = child1
+      order = 0
+      position = 1108
+      ratio = 0.5791949817041296
+    [[[terminal3]]]
+      type = Terminal
+      parent = child2
+      order = 0
+      profile = default
+      title = vim
+      uuid = 98940032-e129-4685-8a05-cfa9d4835f89
+    [[[child4]]]
+      type = VPaned
+      parent = child2
+      order = 1
+      position = 414
+      ratio = 0.4190283400809717
+    [[[terminal5]]]
+      type = Terminal
+      parent = child4
+      order = 0
+      profile = default
+      title = shell
+      uuid = 3a2997b7-608a-4af2-a245-6c41d9bd4457
+    [[[terminal6]]]
+      type = Terminal
+      parent = child4
+      order = 1
+      profile = default
+      title = shell
+      uuid = a5448bdb-12d2-47f9-aaff-982ce371afd3
+    [[[child7]]]
+      type = HPaned
+      parent = child1
+      order = 1
+      position = 956
+      ratio = 0.4997386304234187
+    [[[terminal8]]]
+      type = Terminal
+      parent = child7
+      order = 0
+      profile = default
+      title = help
+      uuid = e83ff0dc-6f74-4e8e-a5b6-5d6f259b9fdf
+    [[[terminal9]]]
+      type = Terminal
+      parent = child7
+      order = 1
+      profile = default
+      title = help
+      uuid = f20ee607-4267-4c7d-9c9b-85f2ea451c51
+    [[[terminal10]]]
+      type = Terminal
+      parent = child1
+      order = 2
+      profile = default
+      title = bash
+      uuid = 22e2f0c3-ba25-4f0d-983a-6df49240a575
 [plugins]
