Zim-Wiki configs

--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -1,7 +1,8 @@
 [TextView]
 indent=30
 tabs=None
-font=Ubuntu Mono 13
+# font=Ubuntu Mono 13
+font=Pt Mono 13
 justify=
 linespacing=3
 bullet_icon_size=GTK_ICON_SIZE_MENU
@@ -21,15 +22,13 @@ foreground=grey
 
 [Tag code]
 foreground=#6b426b
-font=Source Code Variable Regular 12
+font=Source Code Variable Regular 13
 
 [Tag pre]
 foreground=#6b426b
-# background=#eeeeee
-font=Source Code Variable Regular 12
+font=Source Code Variable Regular 13
 wrap-mode=GTK_WRAP_NONE
 indent=0
-
 
 [Tag link]
 foreground=#0077bb
@@ -42,19 +41,19 @@ foreground=#ce5c00
 foreground=#4e9a06
 underline=PANGO_UNDERLINE_SINGLE
 weight=PANGO_WEIGHT_BOLD
-scale=1.75
+scale=1.50
 
 [Tag h2]
 foreground=#4e9a06
 weight=PANGO_WEIGHT_BOLD
 style=PANGO_STYLE_NORMAL
-scale=1.52
+scale=1.30
 
 [Tag h3]
 foreground=#4e9a06
 style=PANGO_STYLE_NORMAL
 weight=PANGO_WEIGHT_BOLD
-scale=1.32
+scale=1.20
 
 [Tag h4]
 foreground=#4e9a06
@@ -66,9 +65,11 @@ scale=1.15
 foreground=#4e9a06
 weight=PANGO_WEIGHT_BOLD
 style=PANGO_STYLE_NORMAL
+scale=1.10
 
 [Tag h6]
 foreground=#4e9a06
+scale=1.5
 
 [Tag checked-checkbox]
 
