Update zim configs

--- a/.config/zim/preferences.conf
+++ b/.config/zim/preferences.conf
@@ -1,5 +1,5 @@
 [General]
-plugins=["pageindex","pathbar","insertsymbol","printtobrowser","journal","tags","tableofcontents","versioncontrol","trayicon","spell","tasklist"]
+plugins=["pageindex","pathbar","insertsymbol","journal","tags","tableofcontents","versioncontrol","trayicon","spell","tasklist","printtobrowser"]
 plugins_list_version=0.70
 
 [PageIndexPlugin]
