--- a/.config/terminator/config
+++ b/.config/terminator/config
@@ -21,17 +21,29 @@
     background_color = "#ffffdd"
     cursor_blink = False
     cursor_color = "#aaaaaa"
-    font = ProFontWindows Nerd Font 15
+    font = ProFontIIx Nerd Font Mono 12
     foreground_color = "#2e3436"
+    show_titlebar = False
     scrollback_lines = 19624
     use_system_font = False
   [[Dark]]
     background_color = "#282828"
     cursor_blink = False
     cursor_color = "#aaaaaa"
-    font = ProFontWindows Nerd Font Mono 15
+    font = ProFontIIx Nerd Font Mono 12
     foreground_color = "#ebdbb2"
     palette = "#282828:#cc241d:#98971a:#d79921:#458588:#b16286:#689d6a:#a89984:#928374:#fb4934:#b8bb26:#fabd2f:#83a598:#d3869b:#8ec07c:#ebdbb2"
+    use_system_font = False
+  [[GreenOnBlack]]
+    allow_bold = False
+    background_color = "#101010"
+    cursor_blink = False
+    cursor_color = "#aaaaaa"
+    font = ProFontIIx Nerd Font Mono 12
+    foreground_color = "#4e9a06"
+    show_titlebar = False
+    scrollback_lines = 16384
+    palette = "#2e3436:#ef2929:#4e9a06:#c4a000:#3465a4:#75507b:#06989a:#d3d7cf:#555753:#ef2929:#8ae234:#fce94f:#729fcf:#ad7fa8:#34e2e2:#eeeeec"
     use_system_font = False
 [layouts]
   [[default]]
@@ -336,82 +348,6 @@
       title = bash
       uuid = 14aa665e-0f37-4c92-9913-f6bc36accde0
       directory = /home/fernando/Projects/gnome-terminator.github.io
-  [[Codewars]]
-    [[[child0]]]
-      type = Window
-      parent = ""
-      order = 0
-      position = 0:0
-      maximised = True
-      fullscreen = False
-      size = 1920, 1023
-      title = λ CODEWARS λ
-      last_active_window = True
-    [[[child1]]]
-      type = Notebook
-      parent = child0
-      order = 0
-      labels = Main, Shells
-      last_active_term = 98940032-e129-4685-8a05-cfa9d4835f89, d322b406-de66-4551-8675-ff9dce4c60cd
-      active_page = 1
-    [[[child2]]]
-      type = HPaned
-      parent = child1
-      order = 0
-      position = 1016
-      ratio = 0.531102979613173
-    [[[terminal3]]]
-      type = Terminal
-      parent = child2
-      order = 0
-      profile = default
-      title = vim
-      uuid = 98940032-e129-4685-8a05-cfa9d4835f89
-      directory = /home/fernando/Projects/codewars
-    [[[child4]]]
-      type = VPaned
-      parent = child2
-      order = 1
-      position = 494
-      ratio = 0.5
-    [[[terminal5]]]
-      type = Terminal
-      parent = child4
-      order = 0
-      profile = default
-      title = emacs
-      uuid = ea180571-d2ec-4312-af60-73f96829e65c
-      directory = /home/fernando/Projects/codewars
-    [[[terminal6]]]
-      type = Terminal
-      parent = child4
-      order = 1
-      profile = default
-      title = shell
-      uuid = 9535ae7b-76a4-4e12-8549-da4191cfe6d5
-      directory = /home/fernando/Projects/codewars
-    [[[child7]]]
-      type = HPaned
-      parent = child1
-      order = 1
-      position = 956
-      ratio = 0.4997386304234187
-    [[[terminal8]]]
-      type = Terminal
-      parent = child7
-      order = 0
-      profile = default
-      title = help
-      uuid = cbb8054f-d482-41d3-81f2-359e096078c7
-      directory = /home/fernando/Projects/codewars
-    [[[terminal9]]]
-      type = Terminal
-      parent = child7
-      order = 1
-      profile = default
-      title = shell
-      uuid = d322b406-de66-4551-8675-ff9dce4c60cd
-      directory = /home/fernando/Projects/codewars
   [[Classic]]
     [[[child0]]]
       type = Window
@@ -650,4 +586,66 @@
       title = bash
       uuid = 356aca63-5d6d-4aeb-855f-6b50889ca499
       directory = /home/fernando/Projects/Natura/naturacf-fe
+  [[CodeWars]]
+    [[[child0]]]
+      type = Window
+      parent = ""
+      order = 0
+      position = 0:0
+      maximised = True
+      fullscreen = False
+      size = 1920, 1023
+      title = λ May The Force Be With You! λ
+      last_active_window = True
+    [[[child1]]]
+      type = Notebook
+      parent = child0
+      order = 0
+      labels = CodeWars, ProgHowTo Shells
+      last_active_term = 87e03353-8e9a-4cb3-be5b-6c1595645cf7, 67bed56c-d5d8-4741-9bc6-7c39aecb4a94
+      active_page = 0
+    [[[child2]]]
+      type = HPaned
+      parent = child1
+      order = 0
+      position = 957
+      ratio = 0.5002613695765813
+    [[[terminal3]]]
+      type = Terminal
+      parent = child2
+      order = 0
+      profile = GreenOnBlack
+      title = bash
+      uuid = 98940032-e129-4685-8a05-cfa9d4835f89
+      directory = /home/fernando/Projects/proghowto/0devcodewars
+    [[[terminal4]]]
+      type = Terminal
+      parent = child2
+      order = 1
+      profile = GreenOnBlack
+      title = bash
+      uuid = 87e03353-8e9a-4cb3-be5b-6c1595645cf7
+      directory = /home/fernando/Projects/proghowto/0devcodewars
+    [[[child5]]]
+      type = HPaned
+      parent = child1
+      order = 1
+      position = 956
+      ratio = 0.4997386304234187
+    [[[terminal6]]]
+      type = Terminal
+      parent = child5
+      order = 0
+      profile = GreenOnBlack
+      title = shell
+      uuid = 6447339b-e802-4da5-a8cc-10432120297a
+      directory = /home/fernando/Projects/proghowto
+    [[[terminal7]]]
+      type = Terminal
+      parent = child5
+      order = 1
+      profile = GreenOnBlack
+      title = shell
+      uuid = 67bed56c-d5d8-4741-9bc6-7c39aecb4a94
+      directory = /home/fernando/Projects/proghowto
 [plugins]
