Incrase zim wiki list linespace

--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -70,6 +70,12 @@ scale=1.1
 foreground=#4e9a06
 scale=1.5
 
+[Tag bullet-list]
+linespacing=15
+
+[Tag numbered-list]
+linespacing=12
+
 [Tag checked-checkbox]
 
 [Tag xchecked-checkbox]
