--- a/.config/zim/preferences.conf
+++ b/.config/zim/preferences.conf
@@ -4,6 +4,8 @@ plugins_list_version=0.70
 
 [PageIndexPlugin]
 pane=left_pane
+autoexpand=True
+autocollapse=True
 
 [PathBarPlugin]
 
@@ -56,6 +58,8 @@ pane=left_pane
 pane=right_pane
 floating=False
 show_h1=False
+include_hr=True
+fontsize=0
 
 [TrayIconPlugin]
 classic=False
