Update tmux config

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -6,6 +6,8 @@ bind-key C-a send-prefix
 set -g mode-keys vi
 set -g base-index 1
 
+set -g display-time 4500
+
 # bind-key -T y copy-pipe "xsel -i -p -b"
 bind-key -T copy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
 bind-key p run-shell "xsel -o | tmux load-buffer - ; tmux paste-buffer"
