--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -23,6 +23,7 @@ bind-key L last-window
 # https://github.com/tmux/tmux/wiki/FAQ
 #
 set -g default-terminal tmux-256color
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 
 set -g history-limit 20000
 set -g mouse on
