--- a/tmux/themes/tmux-light.conf
+++ b/tmux/themes/tmux-light.conf
@@ -69,13 +69,13 @@ set -g pane-active-border-style fg=brightred
 if-shell "[[ $(tmux -V | cut -d ' ' -f 2) < 2.2 ]]" \
     'set -g status-utf8 on'
 
-set -g status-style dim,bg='#efefef',fg='#999999'
+set -g status-style dim,bg='#eceaad',fg='#999999'
 set -g status-right 'λ Be Awesome! λ -- %H:%M:%S '
 set -g status-left ' « #S » '
 set -g status-left-length 25
 
 
-set -g window-status-style fg=colour10 #8
+set -g window-status-style fg=colour12 #8
 set -g window-status-format '#I:#W'
 
 set -g window-status-current-format '[#I:#W]'
