Update tmux config with Tux icon

--- a/tmux/themes/tmux-dark.conf
+++ b/tmux/themes/tmux-dark.conf
@@ -57,8 +57,8 @@ set -g pane-active-border-style bg=colour236,fg=colour251
 set -g status-position bottom
 set -g status-style dim,bg=colour234,fg=colour137
 
-set -g status-left '#[fg=colour226]#[bg=colour235] « #S » #[bg=cyan]#[fg=colour8]'
-set -g status-right '#[fg=colour233,bg=colour241] %a, %b %d, %Y #[fg=colour233,bg=colour245] %H:%M:%S '
+set -g status-left '#[fg=colour226]#[bg=colour235]  « #S » #[bg=cyan]#[fg=colour8]'
+set -g status-right '#[fg=colour233,bg=colour241] %a, %b %d, %Y #[fg=colour233,bg=colour245] %H:%M:%S  '
 set -g status-right-length 50
 set -g status-left-length 25
 
