--- a/tmux/themes/tmux-light.conf
+++ b/tmux/themes/tmux-light.conf
@@ -70,8 +70,8 @@ if-shell "[[ $(tmux -V | cut -d ' ' -f 2) < 2.2 ]]" \
     'set -g status-utf8 on'
 
 set -g status-style dim,bg='#eceaad',fg='#999999'
-set -g status-right 'λ Be Awesome! λ -- %H:%M:%S '
-set -g status-left ' « #S » '
+set -g status-right 'λ Be Awesome! λ -- %H:%M:%S  '
+set -g status-left '  « #S » '
 set -g status-left-length 25
 
 
