Improve tmux light theme

--- a/tmux/themes/tmux-light.conf
+++ b/tmux/themes/tmux-light.conf
@@ -73,9 +73,9 @@ set -g status-style dim,bg='#eceaad',fg='#999999'
 set -g status-right 'λ Be Awesome! λ -- %H:%M:%S  '
 set -g status-left '  « #S » '
 set -g status-left-length 25
+set -g status-left-style fg=colour9
 
-
-set -g window-status-style fg=colour12 #8
+set -g window-status-style fg=colour7
 set -g window-status-format '#I:#W'
 
 set -g window-status-current-format '[#I:#W]'
