Style tmux command and message bar

--- a/tmux/themes/tmux-light.conf
+++ b/tmux/themes/tmux-light.conf
@@ -81,3 +81,8 @@ set -g window-status-format '#I:#W'
 set -g window-status-current-format '[#I:#W]'
 set -g window-status-current-style fg=colour11
 
+#
+# Command line bar and message bar.
+#
+set -g message-style bg=colour119,fg=colour5
+
