Set ESC time for tmux
Avoids ESC delay in nvim.

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -23,13 +23,19 @@ bind-key L last-window
 # https://github.com/tmux/tmux/wiki/FAQ
 #
 set -g default-terminal tmux-256color
-set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
+set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm,*256color:Tc'
 
 set -g history-limit 20000
 set -g mouse on
 set-option -g allow-rename off
 set-option -g automatic-rename off
-#set -sg escape-time 0.2
+
+#
+# ESC in vim/nvim takes too long.
+#
+# https://github.com/neovim/neovim/wiki/FAQ#esc-in-tmux-or-gnu-screen-is-delayed
+#
+set -sg escape-time 10
 
 # bind a reload key
 bind-key R source-file ~/.tmux.conf \; \
