--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-    editor = vim -c 'colorscheme mylight1' -c 'AirlineTheme xtermlight' -c 'set spell spelllang=en'
+	editor = nvim -c 'set spell spelllang=en'
 	autocrlf = input
 [alias]
 	st = status
