Update tons of configs

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -47,6 +47,19 @@ bind-key S new-window -n 'sass'
 bind-key E new-window -n 'emacs'
 bind-key V new-window -n 'vim'
 
+##
+# It is a bit annoying having to type C-a :clear-history Return
+# every time I need it.
+#
+# To use it, first clear your shell with ‘C-l’ or the command ‘clear’
+# and then do ‘C-a r’. It nothing will “seem” to happen, but the scroll
+# back will have been gone.
+#
+bind-key r clear-history
+
 bind-key C-y set-window-option synchronize-panes \; \
   display-message " synchronize-panes toggled "
+
+
+# vim: set tw=72:
 
