--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -4,21 +4,29 @@
 font:
   size: 13
 
+  offset:
+    x: 0
+    y: 8
+
+  glyph_offset:
+    x: 0
+    y: 4
+
   normal:
-    family: SpaceMono Nerd Font
+    family: Hurmit Nerd Font Mono
     style: Bold
 
   bold:
-    family: SpaceMono Nerd Font
+    family: Hurmit Nerd Font Mono
     style: Bold
 
   italic:
-    family: SpaceMono Nerd Font
-    style: Italic
+    family: Hurmit Nerd Font Mono
+    style: Bold
 
   bold_italic:
-    family: SpaceMono Nerd Font
-    style: Bold Italic
+    family: Hurmit Nerd Font Mono
+    style: Bold
 
 window:
   padding:
@@ -27,6 +35,7 @@ window:
   dimensions:
     columns: 142
     lines: 38
+
 
 ########################################################################
 # Other Configs
@@ -44,33 +53,71 @@ scrolling:
 # https://github.com/alacritty/alacritty/wiki/Color-schemes
 #
 # Gruvbox Dark
+#colors:
+#  # Default colors
+#  primary:
+#    # hard contrast: background = '#1d2021'
+#    background: '#282828'
+#    # soft contrast: background = '#32302f'
+#    foreground: '#ebdbb2'
+#
+#  # Normal colors
+#  normal:
+#    black:   '#282828'
+#    red:     '#cc241d'
+#    green:   '#98971a'
+#    yellow:  '#d79921'
+#    blue:    '#458588'
+#    magenta: '#b16286'
+#    cyan:    '#689d6a'
+#    white:   '#a89984'
+#
+#  # Bright colors
+#  bright:
+#    black:   '#928374'
+#    red:     '#fb4934'
+#    green:   '#b8bb26'
+#    yellow:  '#fabd2f'
+#    blue:    '#83a598'
+#    magenta: '#d3869b'
+#    cyan:    '#8ec07c'
+#    white:   '#ebdbb2'
+
+
+# Base16 Solarized Light - alacritty color config
+# Ethan Schoonover (modified by aramisgithub)
 colors:
   # Default colors
   primary:
-    # hard contrast: background = '#1d2021'
-    background: '#282828'
-    # soft contrast: background = '#32302f'
-    foreground: '#ebdbb2'
+    background: '0xfdf6e3'
+    foreground: '0x586e75'
+
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: '0xfdf6e3'
+    cursor: '0x586e75'
 
   # Normal colors
   normal:
-    black:   '#282828'
-    red:     '#cc241d'
-    green:   '#98971a'
-    yellow:  '#d79921'
-    blue:    '#458588'
-    magenta: '#b16286'
-    cyan:    '#689d6a'
-    white:   '#a89984'
+    black:   '0xfdf6e3'
+    red:     '0xdc322f'
+    green:   '0x859900'
+    yellow:  '0xb58900'
+    blue:    '0x268bd2'
+    magenta: '0x6c71c4'
+    cyan:    '0x2aa198'
+    white:   '0x586e75'
 
   # Bright colors
   bright:
-    black:   '#928374'
-    red:     '#fb4934'
-    green:   '#b8bb26'
-    yellow:  '#fabd2f'
-    blue:    '#83a598'
-    magenta: '#d3869b'
-    cyan:    '#8ec07c'
-    white:   '#ebdbb2'
+    black:   '0x839496'
+    red:     '0xcb4b16'
+    green:   '0xeee8d5'
+    yellow:  '0x93a1a1'
+    blue:    '0x657b83'
+    magenta: '0x073642'
+    cyan:    '0xd33682'
+    white:   '0x002b36'
+
+draw_bold_text_with_bright_colors: false
 
