--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 #
 
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 source-file ~/Projects/dotfiles/tmux/shared-config.conf
 
