Change Kitty font to inconsolate expanded

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,9 +3,10 @@
 # Some fonts have enough “line spacing”. Most fonts look too close to
 # one another so I add a little more space between the characters.
 #
-font_family         Source Code Pro Semibold
-font_size           13
-adjust_line_height 100%
+#font_family         Source Code Pro Semibold
+font_family         Inconsolata Semi Expanded SemiBold
+font_size           14
+adjust_line_height  100%
 adjust_column_width 110%
 
 cursor_blink_interval   0
