--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -34,8 +34,8 @@ map f2 launch --stdin-source=@screen_scrollback less -R
 ##
 # Make new windows and tab open in the current directory:
 #
-ctrl+shift+enter new_with_with_cwd
-ctrl+shift+t new_tab_with_cwd
+map ctrl+shift+enter new_with_with_cwd
+map ctrl+shift+t new_tab_with_cwd
 
 map ctrl+alt+h previous_tab
 map ctrl+alt+l next_tab
