--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,8 +3,9 @@
 # Some fonts have enough “line spacing”. Most fonts look too close to
 # one another so I add a little more space between the characters.
 #
-#font_family         Source Code Pro Semibold
+# font_family         Source Code Pro Semibold
 font_family         Inconsolata Semi Expanded SemiBold
+# font_family           Hurmit Nerd Font Mono
 font_size           14
 adjust_line_height  115%
 adjust_column_width 110%
@@ -15,8 +16,8 @@ enable_audio_bell no
 scrollback_lines 8192
 
 draw_minimal_borders no
-window_margin_width 0
-window_padding_width 4
+window_margin_width 2
+window_padding_width 2
 
 ##
 # Scrollback Lines
@@ -34,7 +35,7 @@ map f2 launch --stdin-source=@screen_scrollback less -R
 ##
 # Make new windows and tab open in the current directory:
 #
-map ctrl+shift+enter new_with_with_cwd
+map ctrl+shift+enter new_window_with_cwd
 map ctrl+shift+t new_tab_with_cwd
 
 map ctrl+alt+h previous_tab
@@ -43,7 +44,8 @@ map ctrl+alt+l next_tab
 ########################################################################
 # Theme
 #
-include ./kitty-themes/themes/gruvbox_light.conf
+include ./kitty-themes/themes/gruvbox_dark.conf
+# include ./kitty-themes/themes/gruvbox_light.conf
 
 # vim: set tw=72:
 
