Update a few configs

--- a/.config/zim/style.conf
+++ b/.config/zim/style.conf
@@ -21,11 +21,11 @@ foreground=grey
 
 [Tag code]
 foreground=#6b426b
-font=Source Code Variable Regular 13
+font=Source Code Pro Regular 13
 
 [Tag pre]
 foreground=#6b426b
-font=Source Code Variable Regular 13
+font=Source Code Pro Regular 13
 wrap-mode=GTK_WRAP_NONE
 indent=0
 
