--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -40,12 +40,12 @@ set -sg escape-time 10
 # bind a reload key
 bind-key R source-file ~/.tmux.conf \; \
   display-message "  ~/.tmux.conf reloaded..".
-bind-key G new-window -n 'ghci λ' \; send-keys ghci C-m
-bind-key I new-window -n 'irb' \; send-keys irb C-m
-bind-key N new-window -n 'nodejs' \; send-keys 'node -i' C-m
-bind-key S new-window -n 'sass'
-bind-key E new-window -n 'emacs'
-bind-key V new-window -n 'vim'
+# bind-key G new-window -n 'ghci λ' \; send-keys ghci C-m
+# bind-key I new-window -n 'irb' \; send-keys irb C-m
+# bind-key N new-window -n 'nodejs' \; send-keys 'node -i' C-m
+# bind-key S new-window -n 'sass'
+# bind-key E new-window -n 'emacs'
+# bind-key V new-window -n 'vim'
 
 ##
 # It is a bit annoying having to type C-a :clear-history Return
