Update tmux to set titles stuff

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -30,6 +30,9 @@ set -g mouse on
 set-option -g allow-rename off
 set-option -g automatic-rename off
 
+set-option -g set-titles on
+set-option -g set-titles-string "λ #S — #W λ"
+
 #
 # ESC in vim/nvim takes too long.
 #
