Update kitty colors, fonts and other stuff

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,9 +3,7 @@
 # Some fonts have enough “line spacing”. Most fonts look too close to
 # one another so I add a little more space between the characters.
 #
-# font_family         Source Code Pro Semibold
-font_family         Inconsolata Semi Expanded SemiBold
-# font_family           Hurmit Nerd Font Mono
+font_family         Inconsolata SemiExpanded SemiBold
 font_size           14
 adjust_line_height  115%
 adjust_column_width 110%
@@ -16,15 +14,17 @@ enable_audio_bell no
 scrollback_lines 8192
 
 draw_minimal_borders no
-window_margin_width 2
-window_padding_width 2
+window_margin_width 1
+window_padding_width 1
+
+enabled_layouts tall,horizontal,vertical,splits,grid,stack
 
 ##
 # Scrollback Lines
 #
 scrollback_lines 8192
 
-map f1 launch --type=tab --title scrollback-buf-nvim --stdin-source=@screen_scrollback nvim -
+map f1 launch --type=tab --title scrollback-buf-nvim --stdin-source=@screen_scrollback vim -
 map f2 launch --stdin-source=@screen_scrollback less -R
 
 
@@ -45,7 +45,54 @@ map ctrl+alt+l next_tab
 # Theme
 #
 # include ./kitty-themes/themes/gruvbox_dark.conf
-include ./kitty-themes/themes/gruvbox_light.conf
+# include ./kitty-themes/themes/gruvbox_light.conf
+# include ./kitty-themes/themes/Solarized_Light.conf
+
+
+##
+# Solarized Light
+# ===============
+#
+# Looks like the imported Solarized_Light from kitty-themes is acting
+# out. It does not work with Vim Solarized Light and produces a dark
+# background instead. Very strange indeed.
+#
+# References:
+#
+# • https://github.com/kovidgoyal/kitty/issues/897#issuecomment-419220650
+# • https://github.com/dexpota/kitty-themes/issues/44 (my issue)
+#
+
+background #fdf6e3
+foreground #657b83
+
+cursor     #586e75
+selection_background #475b62
+selection_foreground #eae3cb
+
+color0  #073642
+color8  #002b36
+
+color1  #dc322f
+color9  #cb4b16
+
+color2  #859900
+color10 #586e75
+
+color3  #b58900
+color11 #657b83
+
+color4  #268bd2
+color12 #839496
+
+color5  #d33682
+color13 #6c71c4
+
+color6  #2aa198
+color14 #93a1a1
+
+color7  #eee8d5
+color15 #fdf6e3
 
 # vim: set tw=72:
 
