kitty: add a few shortcuts
• Resize windows using ‘Ctrl+{left,right,up,down}’;
• Switch tabs with ‘Alt+{1..9}’.

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -41,6 +41,29 @@ map ctrl+shift+t new_tab_with_cwd
 map ctrl+alt+h previous_tab
 map ctrl+alt+l next_tab
 
+##
+# Resizing windows.
+#
+# https://sw.kovidgoyal.net/kitty/layouts.html#resizing-windows
+#
+map ctrl+left resize_window narrower
+map ctrl+right resize_window wider
+map ctrl+up resize_window taller
+map ctrl+down resize_window shorter
+
+##
+# Navigate to tabs with Alt+N.
+#
+map alt+1 goto_tab 1
+map alt+2 goto_tab 2
+map alt+3 goto_tab 3
+map alt+4 goto_tab 4
+map alt+5 goto_tab 5
+map alt+6 goto_tab 6
+map alt+7 goto_tab 7
+map alt+8 goto_tab 8
+map alt+9 goto_tab 9
+
 ########################################################################
 # Theme
 #
