editorconfig: use tabs and text width for bash scripts
Bash has some features related to HEREDOCS and hard tabs to allow
indeting the source code and using spaces for bash script indentation
end up making one losing that goodie. Example:

  if [[ -z $1 ]] ; then
  	cat <<-EOF
  	  Use the source, Luke.
  	  Read the --help, the info and the man pages.
  	EOF
  fi

The snippet above allowed the ending EOF to be indented with the initial
like of the heredoc. Only spaces are kept in the output.

--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,14 @@ insert_final_newline = true
 [*.{md}]
 trim_trailing_whitespace = false
 
+##
+# I use hard tabs for bash scripts because of the ‘<<-EOF’ syntax
+# which removes tabs from HEREDOCS allowing EOF delimiters to be
+# indented more naturally with the code. See
+#
+#   ‘man bash’ → ‘REDIRECTION’ → ‘Here Documents’
+#
+[*.{sh,bash}]
+indent_style = tab
+max_line_length = 72
+
