--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,11 @@
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'jimeh/tmux-themepack'
 
 source-file ~/Projects/dotfiles/tmux/shared-config.conf
+
+set -g @themepack 'powerline/double/magenta'
 
 #
 # Allows tmux to be started either in dark or light mode. Example:
@@ -14,7 +17,7 @@ source-file ~/Projects/dotfiles/tmux/shared-config.conf
 #
 #   $ THEME=dark tmux new-session -s playground
 #
-if-shell '[ "$THEME" = dark ]' \
+# if-shell '[ "$THEME" = dark ]' \
     'source-file ~/Projects/dotfiles/tmux/themes/tmux-dark.conf' \
     'source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf'
 
