--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,11 +4,8 @@
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'jimeh/tmux-themepack'
 
 source-file ~/Projects/dotfiles/tmux/shared-config.conf
-
-set -g @themepack 'powerline/double/magenta'
 
 #
 # Allows tmux to be started either in dark or light mode. Example:
@@ -17,13 +14,11 @@ set -g @themepack 'powerline/double/magenta'
 #
 #   $ THEME=dark tmux new-session -s playground
 #
-# if-shell '[ "$THEME" = dark ]' \
+if-shell '[ "$THEME" = dark ]' \
     'source-file ~/Projects/dotfiles/tmux/themes/tmux-dark.conf' \
     'source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf'
 
-
 run -b '~/.tmux/plugins/tpm/tpm'
-
 
 ##################################################################################
 # References:
