Add one more clear-history Tmux key binding
‘<prefix>r’ silently clears the history, while ‘<prefix>M-k’ displays a
message saying the history has been cleared.

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -19,6 +19,9 @@ bind-key l select-pane -R
 
 bind-key L last-window
 
+bind-key M-k clear-history \; \
+  display-message 'History cleared!'
+
 ##
 # Switch windows with ‘Alt-<number>’.
 #
@@ -73,6 +76,9 @@ bind-key R source-file ~/.tmux.conf \; \
 # back will have been gone.
 #
 bind-key r clear-history
+bind-key M-k clear-history \; \
+  display-message 'History cleared!'
+
 
 bind-key C-y set-window-option synchronize-panes \; \
   display-message " synchronize-panes toggled "
