--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,10 +3,11 @@
 # Some fonts have enough “line spacing”. Most fonts look too close to
 # one another so I add a little more space between the characters.
 #
-font_family         Inconsolata SemiExpanded SemiBold
+# font_family         Inconsolata SemiExpanded SemiBold
+font_family         Source Code Pro Semibold
 font_size           14
 adjust_line_height  115%
-adjust_column_width 110%
+adjust_column_width 100%
 
 cursor_blink_interval   0
 enable_audio_bell no
@@ -67,8 +68,8 @@ map alt+9 goto_tab 9
 ########################################################################
 # Theme
 #
-# include ./kitty-themes/themes/gruvbox_dark.conf
-# include ./kitty-themes/themes/gruvbox_light.conf
+include ./kitty-themes/themes/gruvbox_dark.conf
+# # include ./kitty-themes/themes/gruvbox_light.conf
 # include ./kitty-themes/themes/Solarized_Light.conf
 
 
