Bind tmux ‘prefix ?’ to show all keybindings
For some reason, on Arch Linux ‘prefix ?’ is bound to ‘list-keys -N’
which does not show all key bindings. Let's override it and _not_ use
the ‘-N’.

https://man.openbsd.org/tmux#list-keys

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -20,6 +20,12 @@ bind-key l select-pane -R
 bind-key L last-window
 
 ##
+# For some reason, in Arch Linux ‘prefix ?’ is bound to ‘list-keys -N’
+# which does not list all of the key bindings. Let's override it.
+#
+bind-key ? list-keys
+
+##
 # Switch windows with ‘Alt-<number>’.
 #
 bind-key -n M-1 select-window -t 1
