tmux: config to use my own ligth theme back again

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,7 @@ set -g @plugin 'jimeh/tmux-themepack'
 
 source-file ~/Projects/dotfiles/tmux/shared-config.conf
 
-set -g @themepack 'powerline/default/yellow'
+# set -g @themepack 'powerline/default/yellow'
 
 #
 # Allows tmux to be started either in dark or light mode. Example:
@@ -17,19 +17,19 @@ set -g @themepack 'powerline/default/yellow'
 #
 #   $ THEME=dark tmux new-session -s playground
 #
-# if-shell '[ "$THEME" = dark ]' \
-#     'source-file ~/Projects/dotfiles/tmux/themes/tmux-dark.conf' \
-#     'source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf'
+if-shell '[ "$THEME" = dark ]' \
+    'source-file ~/Projects/dotfiles/tmux/themes/tmux-dark.conf' \
+    'source-file ~/Projects/dotfiles/tmux/themes/tmux-light.conf'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
 ##################################################################################
 # References:
 #
-# - man tmux
-# - https://wiki.archlinux.org/index.php/tmux
-# - https://github.com/ThomasAdam/tmux/blob/master/FAQ
-# - https://www.reddit.com/r/unixporn/comments/3cn5gi/tmux_is_my_wm_on_os_x/
-# - http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
-# - https://github.com/tmux/tmux/issues/1689 (with an answer from me)
+# • man tmux
+# • https://wiki.archlinux.org/index.php/tmux
+# • https://github.com/ThomasAdam/tmux/blob/master/FAQ
+# • https://www.reddit.com/r/unixporn/comments/3cn5gi/tmux_is_my_wm_on_os_x/
+# • http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/
+# • https://github.com/tmux/tmux/issues/1689 (with an answer from me)
 #
