tmux: improve configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,7 +4,12 @@
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'jimeh/tmux-themepack'
+
+##
+# If it is enabled, my “if-shell source theme” below does not work
+# even if I do not source any of these themes.
+#
+# set -g @plugin 'jimeh/tmux-themepack'
 
 source-file ~/Projects/dotfiles/tmux/shared-config.conf
 
