--- a/tmux/themes/tmux-light.conf
+++ b/tmux/themes/tmux-light.conf
@@ -69,18 +69,18 @@ set -g pane-active-border-style fg=brightred
 if-shell "[[ $(tmux -V | cut -d ' ' -f 2) < 2.2 ]]" \
     'set -g status-utf8 on'
 
-set -g status-style dim,bg='#eceaad',fg='#999999'
+set -g status-style dim,bg='#eceaad',fg='#555555'
 set -g status-right 'λ Be Awesome! λ -- %H:%M:%S  '
 set -g status-right-style dim,bg='#eceaad',fg='#555555'
 set -g status-left '  « #S » '
 set -g status-left-length 25
 set -g status-left-style fg=colour9
 
-set -g window-status-style fg=colour7
+set -g window-status-style fg='#555555'
 set -g window-status-format ' #I:#W'
 
 set -g window-status-current-format ' [#I:#W]'
-set -g window-status-current-style fg=colour11
+set -g window-status-current-style fg=colour5
 
 #
 # Command line bar and message bar.
