Change M-k tmux command to clear visible text as well
Until this commit, my `<prefix>M-k` binding would clear only the
scrollback buffer. From now one, it first sends a reset command to tmux
so it clear both the visible text and the scrollback buffer. Read
comments on the change.

--- a/tmux/shared-config.conf
+++ b/tmux/shared-config.conf
@@ -79,9 +79,17 @@ bind-key R source-file ~/.tmux.conf \; \
 # back will have been gone.
 #
 bind-key r clear-history
-bind-key M-k clear-history \; \
-  display-message 'History cleared!'
 
+##
+# `send-keys -R` resets the terminal (so even visible text disappears)
+# and then `clear-history` erases the scrollback buffer. Useful when one
+# wants to focus only new output, like search only new output from a
+# server or another running command.
+#
+bind-key M-k \
+  send-keys -R \; \
+  clear-history \; \
+  display-message 'History cleared!'
 
 bind-key C-y set-window-option synchronize-panes \; \
   display-message " synchronize-panes toggled "
